@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19900427
+MANIFEST for ded, version t19900507
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
